fixed height issue on mobile links

--- a/main.css
+++ b/main.css
@@ -12,13 +12,15 @@
 }
 
 .container {
-  max-width: 1195px;
+  width: 1195px;
   margin: 0 auto;
   padding: 0 10px;
 }
 
 .wrapper {
-  overflow-y: auto;
+  /* overflow-y: auto; */
+  border: 1px dotted white;
+  min-height: 100vh;
 }
 
 body {
@@ -170,7 +172,6 @@ h5 {
 .my-links {
   display: flex;
   flex-direction: row;
-  height: 100px;
   padding: 20px 0;
   justify-content: space-between;
   gap: 5px;
@@ -193,9 +194,8 @@ h5 {
 
 footer {
   background-color: #212121;
-  padding: 12px 0;
   height: 46px;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 
 .footer {
@@ -203,6 +203,7 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 
 .name {
@@ -216,6 +217,10 @@ footer {
   color: rgb(167, 167, 167);
 }
 
+.spacer {
+  height: 20px;
+}
+
 /* Might need later */
 @media screen and (max-width:1195px) {
   .my-links {
@@ -225,5 +230,9 @@ footer {
 
   .btn-link {
     width: 80%;
+  }
+
+  .container {
+    width: 100%;
   }
 }
